fixed update and overflow issue

--- a/FrontEnd/src/app/routing-top-bar/routing-top-bar.component.css
+++ b/FrontEnd/src/app/routing-top-bar/routing-top-bar.component.css
@@ -4,6 +4,12 @@
     top: 0;
     padding: 3em;
     max-width: 100vw;
+    
+}
+
+#info-container{
+    max-height: 70vh;
+    overflow-y: scroll;
 }
 
 .icon-info{
